objects/Job_Posting__c.object
<CustomObject>
    <fields>
        <fullName>Job_Posting_Site__c</fullName>
        <label>Job Posting Site</label>
        <referenceTo>Job_Posting_Site__c</referenceTo>
        <relationshipLabel>Job Postings</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Postings</relationshipLabel>
        <relationshipName>Job_Postings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>new_phone__c</fullName>
        <label>new phone</label>
        <type>Phone</type>
    </fields>
    <label>Job Posting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JOBPOST-{0000}</displayFormat>
        <label>Job Posting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>